CV2ANDRIOD-547 Dashboard Reserve Release Api integration.

--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -414,8 +414,8 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_gravity="center"
-                                        android:fontFamily="@font/opensans_semibold"
                                         android:layout_marginEnd="@dimen/_2sdp"
+                                        android:fontFamily="@font/opensans_semibold"
                                         android:text="@string/custom_date_range"
                                         android:textColor="@color/primary_black"
                                         android:textSize="@dimen/_10ssp" />
@@ -539,8 +539,7 @@
                                     <TextView
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-
-                                        android:fontFamily="@font/opensans_semibold"
+                                        android:fontFamily="@font/opensans_regular"
                                         android:text="@string/refunds"
                                         android:textColor="@color/dark_grey"
                                         android:textSize="@dimen/_11ssp" />
@@ -564,7 +563,6 @@
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             android:layout_marginStart="@dimen/_2sdp"
-
                                             android:fontFamily="@font/opensans_semibold"
                                             android:text="@string/currency"
                                             android:textColor="@color/primary_black"
@@ -581,7 +579,7 @@
                                     <TextView
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:fontFamily="@font/opensans_semibold"
+                                        android:fontFamily="@font/opensans_regular"
                                         android:text="@string/processingfee"
                                         android:textColor="@color/dark_grey"
                                         android:textSize="@dimen/_11ssp" />
@@ -628,7 +626,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_marginTop="@dimen/_10sdp"
-                                        android:fontFamily="@font/opensans_semibold"
+                                        android:fontFamily="@font/opensans_regular"
                                         android:text="@string/miscfee"
                                         android:textColor="@color/dark_grey"
                                         android:textSize="@dimen/_11sdp" />
@@ -667,7 +665,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_marginTop="@dimen/_11sdp"
-                                        android:fontFamily="@font/opensans_semibold"
+                                        android:fontFamily="@font/opensans_regular"
                                         android:text="@string/netamount"
                                         android:textColor="@color/dark_grey"
                                         android:textSize="@dimen/_11ssp" />
@@ -714,7 +712,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_marginTop="@dimen/_10sdp"
-                                        android:fontFamily="@font/opensans_semibold"
+                                        android:fontFamily="@font/opensans_regular"
                                         android:text="@string/highestticket"
                                         android:textColor="@color/dark_grey"
                                         android:textSize="@dimen/_11ssp" />
@@ -753,7 +751,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_marginTop="@dimen/_11sdp"
-                                        android:fontFamily="@font/opensans_semibold"
+                                        android:fontFamily="@font/opensans_regular"
                                         android:text="@string/averageticket"
                                         android:textColor="@color/dark_grey"
                                         android:textSize="@dimen/_11ssp" />
@@ -783,11 +781,12 @@
                                 </LinearLayout>
 
                             </LinearLayout>
+
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/_10sdp"
                                 android:layout_marginHorizontal="@dimen/_13sdp"
+                                android:layout_marginTop="@dimen/_10sdp"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:text="@string/sales_orders"
                                 android:textColor="@color/dark_grey"
@@ -840,6 +839,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/_10sdp"
                         android:layout_marginTop="@dimen/_10sdp"
+                        android:layout_marginBottom="@dimen/_10sdp"
                         android:layout_marginRight="@dimen/_10sdp"
                         app:cardCornerRadius="@dimen/_10sdp">
 
@@ -927,7 +927,7 @@
                                         android:layout_weight="1"
                                         android:fontFamily="@font/opensans_regular"
                                         android:text="@string/a_u_pay"
-                                        android:textColor="@color/primary_black"
+                                        android:textColor="@color/dark_gray"
                                         android:textSize="@dimen/_10ssp" />
                                 </LinearLayout>
 
@@ -997,7 +997,7 @@
                                             android:layout_height="wrap_content"
                                             android:layout_marginTop="@dimen/_3sdp"
                                             android:fontFamily="@font/opensans_bold"
-                                            android:text=""
+                                            android:text="0.00"
                                             android:textColor="@color/primary_black"
                                             android:textSize="@dimen/_20ssp" />
 
@@ -1023,22 +1023,22 @@
                                             android:id="@+id/nxtPayoutDatenTimeTV"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
+                                            android:layout_marginStart="@dimen/_5sdp"
                                             android:layout_marginBottom="@dimen/_14sdp"
                                             android:fontFamily="@font/opensans_regular"
                                             android:text=""
-                                            android:layout_marginStart="@dimen/_5sdp"
                                             android:textColor="@color/dark_grey"
                                             android:textSize="@dimen/_10ssp" />
 
-<!--                                        <TextView-->
-<!--                                            android:id="@+id/nxtPayoutTimeTV"-->
-<!--                                            android:layout_width="wrap_content"-->
-<!--                                            android:layout_height="wrap_content"-->
-<!--                                            android:layout_marginBottom="@dimen/_14sdp"-->
-<!--                                            android:fontFamily="@font/opensans_regular"-->
-<!--                                            android:text="@string/time"-->
-<!--                                            android:textColor="@color/dark_grey"-->
-<!--                                            android:textSize="@dimen/_10ssp" />-->
+                                        <!--                                        <TextView-->
+                                        <!--                                            android:id="@+id/nxtPayoutTimeTV"-->
+                                        <!--                                            android:layout_width="wrap_content"-->
+                                        <!--                                            android:layout_height="wrap_content"-->
+                                        <!--                                            android:layout_marginBottom="@dimen/_14sdp"-->
+                                        <!--                                            android:fontFamily="@font/opensans_regular"-->
+                                        <!--                                            android:text="@string/time"-->
+                                        <!--                                            android:textColor="@color/dark_grey"-->
+                                        <!--                                            android:textSize="@dimen/_10ssp" />-->
                                     </LinearLayout>
                                 </LinearLayout>
 
@@ -1070,7 +1070,7 @@
                                             android:layout_height="wrap_content"
                                             android:layout_marginTop="@dimen/_3sdp"
                                             android:fontFamily="@font/opensans_bold"
-                                            android:text=""
+                                            android:text="0.00"
                                             android:textColor="@color/primary_black"
                                             android:textSize="@dimen/_20ssp" />
 
@@ -1125,13 +1125,40 @@
                                 android:layout_marginHorizontal="@dimen/_11sdp"
                                 android:layout_marginTop="@dimen/_22sdp"
                                 android:layout_weight="1"
-                                android:orientation="vertical">
-
-
-                            </LinearLayout>
+                                android:orientation="vertical"></LinearLayout>
 
                             <TextView
-                                android:id="@+id/tv_PayoutHistory"
+                                android:id="@+id/batchNoTransaction"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="You have no transaction"
+                                android:textColor="@color/dark_gray"
+                                android:fontFamily="@font/opensans_regular"
+                                android:textSize="@dimen/_10sdp"
+                                android:layout_gravity="center"
+                                android:layout_marginBottom="@dimen/_7sdp"
+                                />
+
+                            <View
+                                android:id="@+id/batchView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="@dimen/_1sdp"
+                                android:layout_marginHorizontal="@dimen/_11sdp"
+                                android:background="@color/blue_light" />
+                            <TextView
+                                android:id="@+id/tv_PayoutNoHistory"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="@dimen/_17sdp"
+                                android:layout_marginBottom="@dimen/_14sdp"
+                                android:fontFamily="@font/opensans_bold"
+                                android:text="@string/full_payouts_history"
+                                android:textColor="@color/primary_green"
+                                android:textSize="@dimen/_11ssp" />
+
+                            <TextView
+                                android:id="@+id/tv_PayoutFullHistory"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
@@ -1140,17 +1167,18 @@
                                 android:fontFamily="@font/opensans_bold"
                                 android:text="@string/v_p_history"
                                 android:textColor="@color/primary_green"
-                                android:textSize="@dimen/_11ssp" />
+                                android:textSize="@dimen/_11ssp"
+                                android:visibility="gone"/>
 
 
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/cv_reserve_view"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/_10sdp"
-                        android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginRight="@dimen/_10sdp"
                         android:layout_marginBottom="@dimen/_10sdp"
                         app:cardCornerRadius="@dimen/_10sdp">
@@ -1290,7 +1318,7 @@
                                             android:layout_height="wrap_content"
                                             android:layout_marginTop="@dimen/_3sdp"
                                             android:fontFamily="@font/opensans_bold"
-                                            android:text=""
+                                            android:text="0.00"
                                             android:textColor="@color/primary_black"
                                             android:textSize="@dimen/_20ssp" />
 
@@ -1314,7 +1342,18 @@
                                         android:fontFamily="@font/opensans_regular"
                                         android:text=""
                                         android:textColor="@color/dark_grey"
-                                        android:textSize="@dimen/_10ssp" />
+                                        android:textSize="@dimen/_10ssp"
+                                        android:visibility="gone"/>
+                                    <TextView
+                                        android:id="@+id/nextReleaseNATV"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginBottom="@dimen/_14sdp"
+                                        android:fontFamily="@font/opensans_regular"
+                                        android:text="N/A"
+                                        android:textColor="@color/dark_grey"
+                                        android:textSize="@dimen/_10ssp"
+                                        android:visibility="visible"/>
                                 </LinearLayout>
 
                                 <LinearLayout
@@ -1346,7 +1385,7 @@
                                             android:layout_height="wrap_content"
                                             android:layout_marginTop="@dimen/_3sdp"
                                             android:fontFamily="@font/opensans_bold"
-                                            android:text=""
+                                            android:text="0.00"
                                             android:textColor="@color/primary_black"
                                             android:textSize="@dimen/_20ssp" />
 
@@ -1369,7 +1408,18 @@
                                         android:fontFamily="@font/opensans_regular"
                                         android:text=""
                                         android:textColor="@color/dark_grey"
-                                        android:textSize="@dimen/_10ssp" />
+                                        android:textSize="@dimen/_10ssp"
+                                        android:visibility="gone"/>
+                                    <TextView
+                                        android:id="@+id/lastReleaseNATV"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginBottom="@dimen/_14sdp"
+                                        android:fontFamily="@font/opensans_regular"
+                                        android:text="N/A"
+                                        android:textColor="@color/dark_grey"
+                                        android:textSize="@dimen/_10ssp"
+                                        android:visibility="visible"/>
                                 </LinearLayout>
 
                             </LinearLayout>
@@ -1380,8 +1430,28 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical">
-
                             </LinearLayout>
+
+                            <TextView
+                                android:id="@+id/releaseNoTransaction"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="You have no transaction"
+                                android:textColor="@color/dark_gray"
+                                android:fontFamily="@font/opensans_regular"
+                                android:textSize="@dimen/_10sdp"
+                                android:layout_gravity="center"
+                                android:layout_marginBottom="@dimen/_7sdp"
+                                />
+
+
+                            <View
+                                android:id="@+id/releaseView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="@dimen/_1sdp"
+                                android:background="@color/blue_light"
+                                android:layout_marginHorizontal="@dimen/_11sdp"
+                                />
 
                             <TextView
                                 android:id="@+id/tv_reserve_list"
